# game-boy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpu.cpp  cpu.h  main.cpp  memory.cpp  memory.h  register_file.h  registers.h
.github/workflows/: build_and_run_tests.yml  ci.yml  continuous_integration.yml  run_tests.yml
app/: CMakeLists.txt  main.cpp
app/include/: application_utilities.h  imgui_utilities.h  nfd_sdl3.h  raii_wrappers.h  state_data_types.h  user_interface_utilities.h
app/src/: application_utilities.cpp  imgui_utilities.cpp  main.cpp
assets/: README.md
bootrom/: README.md
core/: CMakeLists.txt  central_processing_unit.cpp  cpu.cpp  emulator.cpp  game_boy.cpp  machine_cycle_interaction.cpp  memory_management_unit.cpp  pixel_processing_unit.cpp  timer.cpp
core/include/: bitwise_utilities.h  central_processing_unit.h  console_output_utilities.h  emulator.h  game_cartridge_slot.h  internal_timer.h  memory_bank_controllers.h  memory_management_unit.h  pixel_processing_unit.h  register_file.h
core/src/: central_processing_unit.cpp  emulator.cpp  game_cartridge_slot.cpp  internal_timer.cpp  memory_bank_controllers.cpp  memory_management_unit.cpp  pixel_processing_unit.cpp  timer.cpp
emulator/: CMakeLists.txt
emulator/include/: bitwise_utilities.h  central_processing_unit.h  console_output_utilities.h  emulator.h  game_cartridge_slot.h  internal_timer.h  memory_bank_controllers.h  memory_management_unit.h  pixel_processing_unit.h  register_file.h
emulator/src/: central_processing_unit.cpp  emulator.cpp  game_cartridge_slot.cpp  internal_timer.cpp  memory_bank_controllers.cpp  memory_management_unit.cpp  pixel_processing_unit.cpp
frontend/: CMakeLists.txt
frontend/include/: raii_wrappers.h  sdl_wrappers.h
frontend/src/: main.cpp
gui/: CMakeLists.txt
gui/include/: display_utilities.h  gui_state_types.h  imgui_rendering.h  input_events.h  raii_wrappers.h
gui/src/: display_utilities.cpp  imgui_rendering.cpp  input_events.cpp  main.cpp
include/: bitwise_utilities.h  central_processing_unit.h  console_output_utilities.h  cpu.h  emulator.h  game_boy.h  helpers.h  machine_cycle_interaction.h  memory_interface.h  memory_management_unit.h  pixel_processing_unit.h  register_file.h  timer.h
include/emulate-game-boy/: cpu.h  game_boy.h  memory.h
include/emulate-gb/: cpu.h  game_boy.h  memory.h
src/: cpu.cpp  game_boy.cpp  main.cpp  memory.cpp
tests/: CMakeLists.txt  test_gbmicrotest.cpp  test_json_single_instructions.cpp  test_mooneye_test_suite.cpp  test_single_instructions_json.cpp
tests/data/gbmicrotest/tests/: 000-oam_lock.s  000-write_to_x8000.s  001-vram_unlocked.s  002-vram_locked.s  004-tima_boot_phase.s  004-tima_cycle_timer.s  007-lcd_on_stat.s  400-dma.s  800-ppu-latch-scx.s  801-ppu-latch-scy.s  802-ppu-latch-tileselect.s  803-ppu-latch-bgdisplay.s  audio_testbench.s  cpu_bus_1.s  div_inc_timing_a.s  div_inc_timing_b.s  dma_0x1000.s  dma_0x9000.s  dma_0xA000.s  dma_0xC000.s  dma_0xE000.s  dma_basic.s  dma_timing_a.s  flood_vram.s  halt_bug.s  halt_op_dupe.s  halt_op_dupe_delay.s  hblank_int_di_timing_a.s  hblank_int_di_timing_b.s  hblank_int_if_a.s  hblank_int_if_b.s  hblank_int_l0.s  hblank_int_l1.s  hblank_int_l2.s  hblank_int_scx0.s  hblank_int_scx0_if_a.s  hblank_int_scx0_if_b.s  hblank_int_scx0_if_c.s  hblank_int_scx0_if_d.s  hblank_int_scx1.s  (+474 more)
tests/src/: gbmicrotest_harness.cpp  mooneye_test_suite_harness.cpp  single_step_tests_harness.cpp  test_gbmicrotest.cpp  test_mooneye_test_suite.cpp  test_single_instructions_json.cpp
